syntax = "proto3";
package cacti.satp.v02.session;

import "cacti/satp/v02/common/message.proto";
import "cacti/satp/v02/service/stage_0.proto";
import "cacti/satp/v02/service/stage_1.proto";
import "cacti/satp/v02/service/stage_2.proto";
import "cacti/satp/v02/service/stage_3.proto";
import "google/protobuf/empty.proto";

message SessionData {
    string id = 1;
    string version = 2;
    string transfer_context_id = 3;
    MessageStagesHashes hashes = 4;
    cacti.satp.v02.common.PayloadProfile payload_profile = 5;
    MessageStagesSignatures signatures = 6;
    string max_retries = 7;
    string max_timeout = 8;
    string logging_profile = 9;
    string recipient_base_path = 10;
    string source_base_path = 11;
    string access_control_profile = 12;
    string application_profile = 13;
    int64 last_sequence_number = 14;
    string sender_gateway_network_id = 15;
    string recipient_gateway_network_id = 16;
    string source_ledger_asset_id = 17; 
    string recipient_ledger_asset_id = 18;
    string server_gateway_pubkey = 19;
    string client_gateway_pubkey = 20;
    string verified_originator_entity_id = 21; 
    string verified_beneficiary_entity_id = 22;
    string asset_profile_id = 23;
    string digital_asset_id = 24;
    string originator_pubkey = 25;
    string beneficiary_pubkey = 26;
    string sender_gateway_owner_id = 27;
    string receiver_gateway_owner_id = 28;
    string hash_transfer_init_claims = 29;
    cacti.satp.v02.common.TransferClaims transfer_init_claims = 30;
    string proposed_transfer_init_claims = 31;
    cacti.satp.v02.common.SignatureAlgorithm signature_algorithm = 32;
    cacti.satp.v02.common.LockType lock_type = 33;
    uint64 lock_expiration_time = 34;
    cacti.satp.v02.common.Permissions permissions = 35;
    string developer_urn = 36;
    cacti.satp.v02.common.CredentialProfile credential_profile = 37;
    cacti.satp.v02.common.SubsequentCalls subsequent_calls = 38;
    repeated cacti.satp.v02.common.History history = 39;
    bool multiple_claims_allowed = 40;
    bool multiple_cancels_allowed = 41;
    string last_message_received_timestamp = 42;
    MessageStagesTimestamps processed_timestamps = 43;
    MessageStagesTimestamps received_timestamps = 44;
    cacti.satp.v02.common.LockAssertionClaim lock_assertion_claim = 45;
    cacti.satp.v02.common.LockAssertionClaimFormat lock_assertion_claim_format = 46;
    cacti.satp.v02.common.MintAssertionClaim mint_assertion_claim = 47;
    cacti.satp.v02.common.MintAssertionClaimFormat mint_assertion_claim_format = 48;
    cacti.satp.v02.common.BurnAssertionClaim burn_assertion_claim = 49;
    cacti.satp.v02.common.BurnAssertionClaimFormat burn_assertion_claim_format = 50;
    cacti.satp.v02.common.AssignmentAssertionClaim assignment_assertion_claim = 51;
    cacti.satp.v02.common.AssignmentAssertionClaimFormat assignment_assertion_claim_format = 52;
    string last_message_hash = 53;
    cacti.satp.v02.common.TransferClaimsFormat transfer_claims_format = 54;
    string client_transfer_number = 55;
    string server_transfer_number = 56;
    uint64 lock_assertion_expiration = 57;
    cacti.satp.v02.common.AssetProfile asset_profile = 58;
    string sender_contract_ontology = 59;
    string receiver_contract_ontology = 60;
    string resource_url = 61;
    cacti.satp.v02.common.WrapAssertionClaim sender_wrap_assertion_claim = 62;
    cacti.satp.v02.common.WrapAssertionClaim receiver_wrap_assertion_claim = 63;
    cacti.satp.v02.common.Asset sender_asset = 64;
    cacti.satp.v02.common.Asset receiver_asset = 65;
    State state = 66;
    cacti.satp.v02.common.Error error_code = 67;
    cacti.satp.v02.common.MessageType phase_error = 68;
    bool recovered_tried = 69;
    SATPMessages satp_messages = 70; 
    string sender_gateway_network_type = 71;
    string recipient_gateway_network_type = 72; 
    Type role = 73;
}

enum State {
    STATE_UNSPECIFIED = 0;
    STATE_ONGOING = 1;
    STATE_COMPLETED = 2;
    STATE_REJECTED = 3;
    STATE_CONDITIONAL_REJECTED = 4;
    STATE_ERROR = 5;
    STATE_RECOVERED = 6;
    STATE_RECOVERING = 7;
}

enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_CLIENT = 1;
    TYPE_SERVER = 2;
}

message SATPMessages {
    Stage0Messages stage0 = 1;
    Stage1Messages stage1 = 2;
    Stage2Messages stage2 = 3;
    Stage3Messages stage3 = 4;
}

message Stage0Messages {
    cacti.satp.v02.service.NewSessionRequest new_session_request_message = 1;
    cacti.satp.v02.service.NewSessionResponse new_session_response_message = 2;
    cacti.satp.v02.service.PreSATPTransferRequest pre_satp_transfer_request_message = 3;
    cacti.satp.v02.service.PreSATPTransferResponse pre_satp_transfer_response_message = 4;
}

message Stage1Messages {
    cacti.satp.v02.service.TransferProposalRequest transfer_proposal_request_message = 1;
    cacti.satp.v02.service.TransferProposalResponse transfer_proposal_receipt_message = 2;
    cacti.satp.v02.service.TransferCommenceRequest transfer_commence_request_message = 4;
    cacti.satp.v02.service.TransferCommenceResponse transfer_commence_response_message = 5;
}

message Stage2Messages {
    cacti.satp.v02.service.LockAssertionRequest lock_assertion_request_message = 1;
    cacti.satp.v02.service.LockAssertionResponse lock_assertion_receipt_message = 2;
}

message Stage3Messages {
    cacti.satp.v02.service.CommitPreparationRequest commit_preparation_request_message = 1;
    cacti.satp.v02.service.CommitPreparationResponse commit_ready_response_message = 2;
    cacti.satp.v02.service.CommitFinalAssertionRequest commit_final_assertion_request_message = 3;
    cacti.satp.v02.service.CommitFinalAssertionResponse commit_final_acknowledgement_receipt_response_message = 4;
    cacti.satp.v02.service.TransferCompleteRequest transfer_complete_message = 5;
    cacti.satp.v02.service.TransferCompleteResponse transfer_complete_response_message = 6;
}

message MessageStagesHashes {
    Stage0Hashes stage0 = 1;
    Stage1Hashes stage1 = 2;
    Stage2Hashes stage2 = 3;
    Stage3Hashes stage3 = 4;  
}

message Stage0Hashes {
    string new_session_request_message_hash = 1;
    string new_session_response_message_hash = 2;
    string pre_satp_transfer_request_message_hash = 3;
    string pre_satp_transfer_response_message_hash = 4;
}

message Stage1Hashes {
    string transfer_proposal_request_message_hash = 1;
    string transfer_proposal_receipt_message_hash = 2;
    string transfer_proposal_reject_message_hash = 3;
    string transfer_commence_request_message_hash = 4;
    string transfer_commence_response_message_hash = 5;
}

message Stage2Hashes {
    string lock_assertion_request_message_hash = 1;
    string lock_assertion_receipt_message_hash = 2;
}

message Stage3Hashes {
    string commit_preparation_request_message_hash = 1;
    string commit_ready_response_message_hash = 2;
    string commit_final_assertion_request_message_hash = 3;
    string commit_final_acknowledgement_receipt_response_message_hash = 4;
    string transfer_complete_message_hash = 5;
    string transfer_complete_response_message_hash = 6;
}

message MessageStagesSignatures {
    Stage0Signatures stage0 = 1;
    Stage1Signatures stage1 = 2;
    Stage2Signatures stage2 = 3;
    Stage3Signatures stage3 = 4;  
}

message Stage0Signatures {
    string new_session_request_message_signature = 1;
    string new_session_response_message_signature = 2;
    string pre_satp_transfer_request_message_signature = 3;
    string pre_satp_transfer_response_message_signature = 4;
}

message Stage1Signatures {
    string transfer_proposal_request_message_signature = 1;
    string transfer_proposal_receipt_message_signature = 2;
    string transfer_proposal_reject_message_signature = 3;
    string transfer_commence_request_message_signature = 4;
    string transfer_commence_response_message_signature = 5;
}

message Stage2Signatures {
    string lock_assertion_request_message_signature = 1;
    string lock_assertion_receipt_message_signature = 2;
}

message Stage3Signatures {
    string commit_preparation_request_message_signature = 1;
    string commit_ready_response_message_signature = 2;
    string commit_final_assertion_request_message_signature = 3;
    string commit_final_acknowledgement_receipt_response_message_signature = 4;
    string transfer_complete_message_signature = 5;
    string transfer_complete_response_message_signature = 6;
}

message MessageStagesTimestamps {
    Stage0Timestamps stage0 = 1;
    Stage1Timestamps stage1 = 2;
    Stage2Timestamps stage2 = 3;
    Stage3Timestamps stage3 = 4;  
}

message Stage0Timestamps {
    string new_session_request_message_timestamp = 1;
    string new_session_response_message_timestamp = 2;
    string pre_satp_transfer_request_message_timestamp = 3;
    string pre_satp_transfer_response_message_timestamp = 4;
}

message Stage1Timestamps {
    string transfer_proposal_request_message_timestamp = 1;
    string transfer_proposal_receipt_message_timestamp = 2;
    string transfer_proposal_reject_message_timestamp = 3;
    string transfer_commence_request_message_timestamp = 4;
    string transfer_commence_response_message_timestamp = 5;
}

message Stage2Timestamps {
    string lock_assertion_request_message_timestamp = 1;
    string lock_assertion_receipt_message_timestamp = 2;
}

message Stage3Timestamps {
    string commit_preparation_request_message_timestamp = 1;
    string commit_ready_response_message_timestamp = 2;
    string commit_final_assertion_request_message_timestamp = 3;
    string commit_final_acknowledgement_receipt_response_message_timestamp = 4;
    string transfer_complete_message_timestamp = 5;
    string transfer_complete_response_message_timestamp = 6;
}

enum SATPStage {
    SATP_STAGE_UNSPECIFIED = 0;
    SATP_STAGE_0 = 1;
    SATP_STAGE_1 = 2;
    SATP_STAGE_2 = 3;
    SATP_STAGE_3 = 4;
}

message SendStatusRequest {
    string status = 1;
    bool has_backup = 2;
}

message GetStatusResponse {
    string status = 1;
    bool has_backup = 2;
}

message PingResponse {
    string message = 1;
}

message RollbackResponse {
    string message = 1;
}

message GetStageVersionResponse {
    string version = 1;
};

service SessionStatusService {
    rpc GetStatus(google.protobuf.Empty) returns (GetStatusResponse) {}
    rpc SendStatus(SendStatusRequest) returns (google.protobuf.Empty) {}
}

// TODO: define common RPC methods for each step. This is a draft
service CommonService {
    rpc Ping(google.protobuf.Empty) returns (PingResponse) {}
    rpc Rollback(google.protobuf.Empty) returns (RollbackResponse) {}
    rpc GetStageVersion(google.protobuf.Empty) returns (GetStageVersionResponse) {};
}